# electronic-store

./: README.md  pyproject.toml  requirements.txt
electronic/: settings.py  urls.py
