[tool.poetry]
name = "electronic-store"
version = "0.1.0"
description = "electronic-store API"
authors = ["Ricardo Rosendo <88691117+RicardoRosendo98@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
factory-boy = "^3.3.0"
django = "^5.0.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
